--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>MM Studio</title>
 </head>
 <body>
-  
+  <nav>
+    <ul>
+      <li>Explore</li>
+      <li>Trends/Experimental</li>
+      <li>About</li>
+        <ul><li><a href="./about.html">Testimonials</a></li></ul>
+      <li>Resources</li>
+    </ul>
+  </nav>
 </body>
 </html>
