About page: Build out

--- a/about.html
+++ b/about.html
@@ -12,6 +12,18 @@
   <!-- Testimonials Section -->
   <div class="testimonial-container">
     <div class="progress-bar"></div>
+    <div class="fas fa-quote-right fa-quote"></div>
+    <div class="fas fa-quote-left fa-quote"></div>
+    <p class="testimonial">
+      Sit sint et est officia velit consequat pariatur nostrud nostrud laboris. Qui laboris incididunt elit laboris. Ipsum laborum ea reprehenderit irure enim excepteur fugiat ea fugiat aliquip ullamco dolor labore enim.
+    </p>
+    <div class="user">
+      <img src="https://randomuser.me/api/portraits/women/46.jpg" alt="user image" class="user-image">
+      <div class="user-details">
+        <h4 class="username">Allie Martz
+        <p class="role">Multimedia Specialist</p>
+      </div>
+    </div>
   </div>
   <script src="./src/index.js"></script>
 </body>
