Style: boilerplate setup

--- a/about.html
+++ b/about.html
@@ -6,9 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About MM</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="./styles/main.css" rel="stylesheet">
 </head>
 <body>
-  
+  <header>Navigation will go here</header>
+  <div class="work-container">
+    <p class="work">
+      Content with what all we provide for our unit.
+    </p>
+  </div>
+  <div class="partners-container">
+    <p class="partners">
+      Mentioning of working with accessibility and editing to provide quality multimedia assets to our customers.
+    </p>
+  </div>
   <!-- Testimonials Section -->
   <div class="testimonial-container">
     <div class="progress-bar"></div>
