Inital page builds

--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 </head>
 <body>
   <nav>
+    <div class="logo">Insert logo</div>
     <ul>
-      <li>Explore</li>
+      <li>Explore Projects</li>
       <li>Trends/Experimental</li>
       <li>About</li>
-        <ul><li><a href="./about.html">Testimonials</a></li></ul>
+        <ul><li><a href="./pages/about.html">Testimonials</a></li></ul>
       <li>Resources</li>
     </ul>
   </nav>
+  <main>
+    <section class="hero">
+      
+    </section>
+  </main>
+  <footer></footer>
 </body>
 </html>
