--- a/index.html
+++ b/index.html
@@ -5,21 +5,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MM Studio</title>
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   <nav>
-    <div class="logo">Insert logo</div>
+    <div class="logo">[Insert logo]</div>
     <ul>
       <li>Explore Projects</li>
       <li>Trends/Experimental</li>
       <li>About</li>
-        <ul><li><a href="./pages/about.html">Testimonials</a></li></ul>
+        <!-- <ul><li><a href="./pages/about.html">Testimonials</a></li></ul> -->
       <li>Resources</li>
     </ul>
   </nav>
   <main>
     <section class="hero">
-      
+      <h1>BIG TITLE</h1>
+      <h2>Excepteur sint occaecat cupidata non</h2>
+      <div class="dots">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="54" height="6" viewBox="0 0 54 6">
+        <defs>
+          <clipPath id="clip-path">
+            <rect width="54" height="6" fill="none"/>
+          </clipPath>
+        </defs>
+          <g id="Dots" clip-path="url(#clip-path)">
+            <circle id="Ellipse_8" data-name="Ellipse 8" cx="3" cy="3" r="3" fill="#1a3651"/>
+            <circle id="Ellipse_9" data-name="Ellipse 9" cx="3" cy="3" r="3" transform="translate(16)" fill="#45c4b0"/>
+            <circle id="Ellipse_10" data-name="Ellipse 10" cx="3" cy="3" r="3" transform="translate(32)" fill="#45c4b0"/>
+            <circle id="Ellipse_11" data-name="Ellipse 11" cx="3" cy="3" r="3" transform="translate(48)" fill="#45c4b0"/>
+          </g>
+        </svg>
+      </div>
+      <a class="explore-button" href="#">EXPLORE <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+        <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H0V9.039H12.052L6.545,14.545,8,16l8-8Z" fill="#1a3651"/>
+      </svg>
+      </span></a>
     </section>
   </main>
   <footer></footer>
