Style build out for main hero page

--- a/index.html
+++ b/index.html
@@ -20,22 +20,24 @@
   </nav>
   <main>
     <section class="hero">
-      <h1>BIG TITLE</h1>
-      <h2>Excepteur sint occaecat cupidata non</h2>
-      <div class="dots">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="54" height="6" viewBox="0 0 54 6">
-        <defs>
-          <clipPath id="clip-path">
-            <rect width="54" height="6" fill="none"/>
-          </clipPath>
-        </defs>
-          <g id="Dots" clip-path="url(#clip-path)">
-            <circle id="Ellipse_8" data-name="Ellipse 8" cx="3" cy="3" r="3" fill="#1a3651"/>
-            <circle id="Ellipse_9" data-name="Ellipse 9" cx="3" cy="3" r="3" transform="translate(16)" fill="#45c4b0"/>
-            <circle id="Ellipse_10" data-name="Ellipse 10" cx="3" cy="3" r="3" transform="translate(32)" fill="#45c4b0"/>
-            <circle id="Ellipse_11" data-name="Ellipse 11" cx="3" cy="3" r="3" transform="translate(48)" fill="#45c4b0"/>
-          </g>
-        </svg>
+      <div class="title-section">
+        <h1>MM Studio</h1>
+        <h2>Welcome to our space.</h2>
+        <div class="dots">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="54" height="6" viewBox="0 0 54 6">
+          <defs>
+            <clipPath id="clip-path">
+              <rect width="54" height="6" fill="none"/>
+            </clipPath>
+          </defs>
+            <g id="Dots" clip-path="url(#clip-path)">
+              <circle id="Ellipse_8" data-name="Ellipse 8" cx="3" cy="3" r="3" fill="#1a3651"/>
+              <circle id="Ellipse_9" data-name="Ellipse 9" cx="3" cy="3" r="3" transform="translate(16)" fill="#45c4b0"/>
+              <circle id="Ellipse_10" data-name="Ellipse 10" cx="3" cy="3" r="3" transform="translate(32)" fill="#45c4b0"/>
+              <circle id="Ellipse_11" data-name="Ellipse 11" cx="3" cy="3" r="3" transform="translate(48)" fill="#45c4b0"/>
+            </g>
+          </svg>
+        </div>
       </div>
       <a class="explore-button" href="#">EXPLORE <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
         <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H0V9.039H12.052L6.545,14.545,8,16l8-8Z" fill="#1a3651"/>
