Testimonal style build & function build start

--- a/pages/about.html
+++ b/pages/about.html
@@ -29,13 +29,13 @@
       Sit sint et est officia velit consequat pariatur nostrud nostrud laboris. Qui laboris incididunt elit laboris. Ipsum laborum ea reprehenderit irure enim excepteur fugiat ea fugiat aliquip ullamco dolor labore enim.
     </p>
     <div class="user">
-      <img src="https://randomuser.me/api/portraits/women/48.jpg" alt="user image" class="user-image">
+      <img src="https://cataas.com/cat/cute" alt="user image" class="user-image">
       <div class="user-details">
         <h4 class="username">Allie Martz
         <p class="role">Multimedia Specialist</p>
       </div>
     </div>
   </div>
-  <script src="./src/index.js"></script>
+  <script src="../src/index.js"></script>
 </body>
 </html>
