--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <div class="logo">[Insert logo]</div>
     <ul>
-      <li>Explore Projects</li>
+      <li>Explore <svg aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg> </li>
       <li>Trends/Experimental</li>
       <li>About</li>
         <!-- <ul><li><a href="./pages/about.html">Testimonials</a></li></ul> -->
