--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <nav>
     <div class="logo">[Insert logo]</div>
     <ul>
-      <li>Explore <svg aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg> </li>
+      <li class="drop-down">Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span> </li>
       <li>Trends/Experimental</li>
-      <li>About</li>
-        <ul class="nav-dropdown"><li><a href="./pages/about.html">Testimonials</a></li></ul>
+      <li class="drop-down-two">About <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span> </li>
+        <ul class="nav-dropdown"><li><a href="./pages/about.html">Testimonials</a></li></ul></li>
       <li>Resources</li>
     </ul>
   </nav>
@@ -39,12 +39,14 @@
           </svg>
         </div>
       </div>
-      <a class="explore-button" href="#">EXPLORE <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+      <a class="explore-button" href="#">EXPLORE <span><svg class="animation" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
         <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H0V9.039H12.052L6.545,14.545,8,16l8-8Z" fill="#1a3651"/>
       </svg>
       </span></a>
     </section>
   </main>
   <footer></footer>
+
+  <script src="../src/index.js"></script>
 </body>
 </html>
