--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <ul>
       <li class="drop-down">Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span> </li>
       <li>Trends/Experimental</li>
-      <li class="drop-down-two">About <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span> </li>
+      <li class="drop-down-two">
+        About 
+        <span class="animate">
+          <svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span> </li>
         <ul class="nav-dropdown"><li><a href="./pages/about.html">Testimonials</a></li></ul></li>
       <li>Resources</li>
     </ul>
