accessibility focus add

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <nav>
     <div class="logo">[Insert logo]</div>
     <ul>
-      <li class="drop-down-two">Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span> </li>
-      <li>Trends</li>
-      <li class="drop-down-two">
+      <li class="drop-down-two" tabindex="0" >Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span> </li>
+      <li tabindex="0">Trends</li>
+      <li class="drop-down-two" tabindex="0">
         About 
         <span class="animate less">
           <svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span> </li>
-        <ul class="nav-dropdown"><li><a href="./pages/about.html">Testimonials</a></li></ul></li>
-      <li>Resources</li>
+        <ul class="nav-dropdown"><li tabindex="0"><a href="./pages/about.html">Testimonials</a></li></ul></li>
+      <li tabindex="0">Resources</li>
     </ul>
   </nav>
   <main>
