Style add to main page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       </span></a></button>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    
+  </footer>
 
   <script src="../src/index.js"></script>
 </body>
