explore page inital build and anchor test

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li class="drop-down-two" tabindex="0" >Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span>
         <div class="nav-dropdown">
           <a  href="./pages/video.html">Video & Audio</a>
-          <a  href="./pages/design.html">Visual Design</a>
+          <a  href="./pages/explore.html#design">Visual Design</a>
           <a  href="./pages/interactive.html">Interactives</a>
           <a  href="./pages/immersive.html">Immersive</a>
         </li>
@@ -44,7 +44,7 @@
           </svg>
         </div>
       </div>
-      <button class="btn-1"><a class="explore-button" href="#">EXPLORE <span><svg class="animation" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+      <button class="btn-1"><a class="explore-button" href="./pages/explore.html">EXPLORE <span><svg class="animation" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
         <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H0V9.039H12.052L6.545,14.545,8,16l8-8Z" fill="#1a3651"/>
       </svg>
       </span></a></button>
