--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <ul>
       <li class="drop-down-two" tabindex="0" >Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span>
         <div class="nav-dropdown">
-          <a  href="./pages/video.html">Video & Audio</a>
+          <a  href="./pages/explore.html#video">Video & Audio</a>
           <a  href="./pages/explore.html#design">Visual Design</a>
-          <a  href="./pages/interactive.html">Interactives</a>
-          <a  href="./pages/immersive.html">Immersive</a>
+          <a  href="./pages/explore.html#interactive">Interactives</a>
+          <a  href="./pages/explore.html#immersive">Immersive</a>
         </li>
       <li tabindex="0">Trends</li>
       <li class="drop-down-two" tabindex="0"><a href="/about">About</a></li>
