Navigation work and page add

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="./pages/explore.html#immersive">Immersive</a>
         </li>
       <li tabindex="0">Trends</li>
-      <li class="drop-down-two" tabindex="0"><a href="/about">About</a></li>
+      <li class="drop-down-two" tabindex="0"><a href="./pages/about.html">About</a></li>
       <li tabindex="0">Resources</li>
     </ul>
   </nav>
