Navigation work and add to explore page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>MM Studio</title>
   <link rel="stylesheet" href="./styles/main.css">
 </head>
-<body>
+<body class="main">
   <nav>
     <div class="logo"></div>
     <ul>
