--- a/pages/trends.html
+++ b/pages/trends.html
@@ -9,6 +9,7 @@
 <body>
   <h2>Immersive Technology</h2>
   <h2>Visual Trends</h2>
+  <h2>Video Formats - iSpring, Kaltura, Zoom</h2>
  
 </body>
 </html>
