--- a/pages/explore.html
+++ b/pages/explore.html
@@ -8,7 +8,26 @@
   <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-  <div id="video">Video</div>
+  <nav>
+    <div class="logo"></div>
+    <ul>
+      <li class="drop-down" tabindex="0" >Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span>
+        <div class="nav-dropdown ">
+          <a href="./pages/explore.html#video">Video & Audio</a>
+          <a href="./pages/explore.html#design">Visual Design</a>
+          <a href="./pages/explore.html#interactive">Interactives</a>
+          <a href="./pages/explore.html#immersive">Immersive</a>
+        </li>
+      <li tabindex="0">Trends</li>
+      <li class="drop-down-two" tabindex="0"><a href="./pages/about.html">About</a></li>
+      <li tabindex="0">Resources</li>
+    </ul>
+  </nav>
+
+  <div class="top-blue">
+    <h2>Let us help you transform your content!</h2>
+  </div>
+<div id="video">Video</div>
   
 
 <h3 id="design">Design</h3>
