--- a/pages/explore.html
+++ b/pages/explore.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav>
-    <div class="logo"></div>
+    <a href="../index.html"><div class="logo"></div></a>
     <ul>
       <li class="drop-down" tabindex="0" >Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span>
         <div class="nav-dropdown ">
