--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <div class="logo"></div>
     <ul>
-      <li class="drop-down" tabindex="0" >Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span>
+      <li class="drop-down" tabindex="0" ><a href="/pages/explore.html">Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
         <div class="nav-dropdown ">
           <a href="./pages/explore.html#video">Video & Audio</a>
           <a href="./pages/explore.html#design">Visual Design</a>
