Style updates to footer, Nav fix, 404 page add

--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
       </span></a></button>
     </section>
   </main>
-  <footer>
+  <footer class="blue">
+    <h3>Connect with our MM Team: <span class="contact">@MMEmail</span></h3>
+    <h4 class="menu">Menu</h4>
+    <ul class="menu-nav">
+      <li>Explore</li>
+      <li>Trends</li>
+      <li>About</li>
+      <li>Resources</li>
+    </ul>
     
   </footer>
 
