--- a/index.html
+++ b/index.html
@@ -50,15 +50,19 @@
       </span></a></button>
     </section>
   </main>
-  <footer class="blue">
-    <h3>Connect with our MM Team: <span class="contact">@MMEmail</span></h3>
-    <h4 class="menu">Menu</h4>
-    <ul class="menu-nav">
-      <li>Explore</li>
-      <li>Trends</li>
-      <li>About</li>
-      <li>Resources</li>
-    </ul>
+  <footer class="grey">
+    <div class="footer-left">
+      <h3>Connect with our MM Team: </h3><span class="contact">@MMEmail</span>
+    </div>
+    <div class="footer-right">
+      <h4 class="menu">Menu</h4>
+      <ul class="menu-nav">
+        <li>Explore</li>
+        <li>Trends</li>
+        <li>About</li>
+        <li>Resources</li>
+      </ul>
+    </div>
     
   </footer>
 
