Style updates to Explore page

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -27,7 +27,13 @@
   <div class="top-blue">
     <h2>Let us help you transform your content!</h2>
   </div>
-<div id="video">Video</div>
+
+  <div id="video">
+    <h1>Video</h1>
+    <div class="video-example">
+      
+    </div>
+  </div>
   
 
 <h3 id="design">Design</h3>
