--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body class="main">
+  <!-- Mobile Nav -->
+  <button class="nav-btn open-btn">
+    <i class="fas fa-bars"></i>
+  </button>
+  <div class="nav nav-purple">
+    <div class="nav nav-teal">
+      <div class="nav nav-med-blue">
+        <button class="nav-btn close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+        <img src="./assets/images/Logo.png" alt="Logo" class="logo">
+        
+        <ul class="list">
+          <li><a href="#">EXPLORE</a></li>
+          <li>
+            <ul>
+              <li><a href="#">Video</a></li>
+              <li><a href="#">Audio</a></li>
+              <li><a href="#">Visual Design</a></li>
+              <li><a href="#">Interactives</a></li>
+              <li><a href="#">Immersive</a></li>
+            </ul>
+          </li>
+          <li><a href="#">TRENDS/EXPERIMENTAL</a></li>
+          <li>
+            <ul>
+              <li><a href="#">Visual Design</a></li>
+              <li><a href="#">360/Poser</a></li>
+            </ul>
+          </li>
+          <li><a href="#">ABOUT</a></li>
+          <li>
+            <ul>
+              <li><a href="#">What We Do</a></li>
+              <li><a href="#">Testimonials</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </li>
+          <li><a href="#">RESOURCES</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- End Mobile Nav -->
+
   <nav>
     <div class="logo"></div>
     <ul>
