z-index fix for mobile nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="nav-btn close-btn">
           <i class="fas fa-times"></i>
         </button>
-        <img src="./assets/images/Logo.png" alt="Logo" class="logo">
+        <img src="./assets/images/logo.svg" alt="Logo" class="logo">
         
         <ul class="list">
           <li><a href="#">EXPLORE</a></li>
