--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body class="main">
   <!-- Mobile Nav -->
-  <button class="nav-btn open-btn">
-    <i class="fas fa-bars"></i>
-  </button>
+  <div id="hamburger_nav" class="hidden">
+    <button class="nav-btn open-btn">
+      <i class="fas fa-bars"></i>
+    </button>
+  </div>
   <div class="nav nav-purple">
     <div class="nav nav-teal">
       <div class="nav nav-med-blue">
@@ -54,7 +56,7 @@
   </div>
   <!-- End Mobile Nav -->
 
-  <nav>
+  <nav id="main_nav">
     <div class="logo"></div>
     <ul>
       <li class="drop-down" tabindex="0" ><a href="/pages/explore.html">Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
