--- a/pages/explore.html
+++ b/pages/explore.html
@@ -25,7 +25,7 @@
   </nav>
 
   <div class="top-blue">
-    <h2>Let us help you transform your content!</h2>
+    <h2 class="md-center">Let us help you transform your content!</h2>
   </div>
 
   <div id="video">
