Explore: Hero pattern add

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -25,7 +25,9 @@
   </nav>
 
   <div class="top-blue">
-    <h2 class="md-center">Let us help you transform your content!</h2>
+    <div class="hex-pattern"></div>
+    <h2 class="md-center fade-in">Let us help you transform your content!</h2>
+    
   </div>
 
   <div id="video">
