Explore: Icon add + font awesome cdn

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Explore</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
   <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-  <nav>
+  <nav class="explore-nav">
     <a href="../index.html"><div class="logo"></div></a>
     <ul>
       <li class="drop-down" tabindex="0" ><a href="/pages/explore.html">Explore <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
@@ -27,11 +28,15 @@
   <div class="top-blue">
     <div class="hex-pattern"></div>
     <h2 class="md-center fade-in">Let us help you transform your content!</h2>
+    <div class="icon-link">
+      <i class="fa-solid fa-film"></i>
+    </i>
+    </div>
     
   </div>
 
   <div id="video">
-    <h1>Video</h1>
+    <h1>Video <i class="fa-solid fa-film"></i></h1>
     <div class="video-example">
       
     </div>
