--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </span></a></button>
     </section>
   </main>
-  
+
   <footer class="grey">
     <div class="footer-left">
       <h3>Connect with our MM Team: </h3><span class="contact">@MMEmail</span>
@@ -106,9 +106,9 @@
     <div class="footer-right">
       <h4 class="menu">Menu</h4>
       <ul class="menu-nav">
-        <li>Explore</li>
+        <a href="./pages/explore.html"><li>Explore</li></a>
         <li>Trends</li>
-        <li>About</li>
+        <a href="./pages/about.html"><li>About</li></a>
         <li>Resources</li>
       </ul>
     </div>
