Footer: link to resources page

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a href="./pages/explore.html"><li>Explore</li></a>
         <li>Trends</li>
         <a href="./pages/about.html"><li>About</li></a>
-        <li>Resources</li>
+        <a href="./pages/resources.html"><li>Resources</li></a>
       </ul>
     </div>
   </footer>
