--- a/pages/resources.html
+++ b/pages/resources.html
@@ -7,6 +7,7 @@
   <title>MM - Resources</title>
 </head>
 <body>
-  
+  <h1>MM - Resources</h1>
+  <h2>Documentation for videoshoots, self-recording best practices</h2>
 </body>
 </html>
