--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
     <div class="footer-right">
       <h4 class="menu">Menu</h4>
       <ul class="menu-nav">
-        <a href="./pages/explore.html"><li>Explore</li></a>
-        <li>Trends</li>
-        <a href="./pages/about.html"><li>About</li></a>
-        <a href="./pages/resources.html"><li>Resources</li></a>
+        <li><a href="./pages/explore.html">Explore</a></li>
+        <li><a href="./pages/trends.html">Trends</a></li>
+        <li><a href="./pages/about.html">About</a></li>
+        <li><a href="./pages/resources.html">Resources</a></li>
       </ul>
     </div>
   </footer>
