--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
       <div class="title-section">
         <h1>MM Studio</h1>
         <h2>Welcome to our space.</h2>
+        <!-- Images
+        https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60
+
+        https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60
+
+        https://images.unsplash.com/photo-1581291519195-ef11498d1cf2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjZ8fFVJJTIwZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60
+
+        https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fFVJJTIwZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60
+           -->
         <div class="dots">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="54" height="6" viewBox="0 0 54 6">
           <defs>
