--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
           <li><a href="#">EXPLORE</a></li>
           <li>
             <ul>
-              <li><a href="#">Video</a></li>
-              <li><a href="#">Audio</a></li>
+              <li><a href="#">Video & Audio</a></li>
               <li><a href="#">Visual Design</a></li>
               <li><a href="#">Interactives</a></li>
               <li><a href="#">Immersive</a></li>
