Navigation updates to services/explore page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <ul>
             <li><a href="./pages/explore.html#video">Video & Audio</a></li>
             <li><a href="./pages/explore.html#design">Visual Design</a></li>
-            <li><a href="./pages/explore.html#interactive">Interactives</a></li>
+            <li><a href="./pages/explore.html#interactive">Interactive</a></li>
             <li><a href="./pages/explore.html#immersive">Immersive</a></li>
           </ul>
         </div>
