--- a/pages/explore.html
+++ b/pages/explore.html
@@ -93,6 +93,7 @@
     <h2 class="center">Video & Audio </h2>
     <div class="video-example">
       <h3>Course Introduction Hype Videos</h3>
+      <!-- Embed code for Horse Course Video -->
     </div>
   </section>
   
