video example add

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -94,6 +94,7 @@
     <div class="video-example">
       <h3>Course Introduction Hype Videos</h3>
       <!-- Embed code for Horse Course Video -->
+      <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="400" frameborder="0"></iframe>
     </div>
   </section>
   
