Updates to relative links

--- a/pages/services.html
+++ b/pages/services.html
@@ -59,12 +59,12 @@
   <nav class="explore-nav" id="main_nav">
     <a href="../index.html"><div class="logo"></div></a>
     <ul>
-      <li class="drop-down" tabindex="0" ><a href="/pages/explore.html">Services <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+      <li class="drop-down" tabindex="0" ><a href="services.html">Services <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
         <div class="nav-dropdown ">
-          <a href="./pages/explore.html#video">Video & Audio</a>
-          <a href="./pages/explore.html#design">Visual Design</a>
-          <a href="./pages/explore.html#interactive">Interactives</a>
-          <a href="./pages/explore.html#immersive">Immersive</a>
+          <a href="services.html#video">Video & Audio</a>
+          <a href="services.html#design">Visual Design</a>
+          <a href="services.html#interactive">Interactives</a>
+          <a href="services.html#immersive">Immersive</a>
         </li>
       <li tabindex="0">Trends</li>
       <li class="drop-down-two" tabindex="0"><a href="./pages/about.html">About</a></li>
@@ -91,6 +91,7 @@
 
   <section id="video-section" class="video-section">
     <h2 class="center">Video & Audio </h2>
+    
     <div class="video-example">
       <h3>Course Introduction Hype Videos</h3>
       <!-- Embed code for Horse Course Video -->
