--- a/pages/services.html
+++ b/pages/services.html
@@ -91,7 +91,7 @@
 
   <section id="video-section" class="video-section">
     <h2 class="center">Video & Audio </h2>
-    <div class ="center">High quality studio recording for voiceover, dialog, podcasts.</div>
+    <div class ="center"><p>Offer high quality studio recording for voiceover, dialog, podcasts. [Add more here]</p></div>
 
     <div class="video-example">
       <h3>Course Introduction Hype Videos</h3>
