--- a/pages/services.html
+++ b/pages/services.html
@@ -94,7 +94,7 @@
 
   <section id="video-section" class="video-section">
     <h2 class="center">Video & Audio </h2>
-    <div class ="center"><p>Offer high quality studio recording for voiceover, dialog, podcasts. [Add more here]</p></div>
+    <div class="center"><p>Offer high quality studio recording for voiceover, dialog, podcasts. [Add more here]</p></div>
 
     <div class="video-example">
       <h3>Course Introduction Hype Videos</h3>
@@ -161,8 +161,57 @@
           </picture>
           <figcaption>Castle Rock</figcaption>
         </figure></a></li>
-      
+      </ul>
+    <div class="media-scroller-container">
+      <h4>Media Scroller</h4>
+      <div class="media-scroller snaps-inline">
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1641353989082-9b15fa661805?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">Short title</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1642190672487-22bde32965f7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">A longer title here</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1641841344411-49dbd02896f4?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">An even longer title on this one</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1643223723262-7ce785730cf6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">A dog that's blinking?</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1640938776314-4d303f8a1380?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">Chair</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1641259041823-e09935369105?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">Ut enim ad minim veniam</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1642543492481-44e81e3914a7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">Duis aute irure dolor</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1641118961077-440391095cdc?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">Cillum dolore eu</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1640767014413-b7d27c58b058?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title"></p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1640948612546-3b9e29c23e98?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">Excepteur sint occaecat cupidatat non proident</p>
+        </div>
+        <div class="media-element">
+          <img src="https://images.unsplash.com/photo-1642484865851-111e68695d71?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc5NQ&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <p class="title">At lectus urnaVestibulum</p>
+        </div>
+      </div>
     </div>
+    
   </section>
   
   <section class="design-section">
