--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
   </nav>
   <main>
     <section class="hero">
-      <div class="image-container" id="imgs">
-        <img class="carousel-img" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library">
+      <div class="carousel-container" id="carousel-imgs" role="region" aria-label="carousel">
+        <img class="carousel-img" src="https://images.unsplash.com/photo-1497015289639-54688650d173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dmlkZW8lMjBzaG9vdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="video shoot scene in a library" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-1" >
 
-        <img class="carousel-img" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes">
+        <img class="carousel-img" src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8ZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="designer drawing prototypes" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-2">
 
-        <img class="carousel-img" src ="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fFVJJTIwZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="laptop sitting on a desk">
+        <img class="carousel-img" src ="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fFVJJTIwZGVzaWduZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=400&q=60" alt="laptop sitting on a desk" role="group" aria-roledescription="slide" aria-labelledby="carousel_item-3">
       </div>
       <!-- Next/prev buttons -->
-      <a class="prev" id="left" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" id="right" onclick="plusSlides(1)">&#10095;</a>
+      <a class="prev" id="left" role="group" aria-label="slide controls previous" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" id="right" role="group" aria-label="slide controls next" onclick="plusSlides(1)">&#10095;</a>
         
       <div class="dot-container">
         <span class="dot" onclick="currentSlide(1)"></span>
