Services: Media scroller with iframe size adjustment

--- a/pages/services.html
+++ b/pages/services.html
@@ -105,7 +105,7 @@
       <h4>Media Scroller</h4>
       <div class="media-scroller snaps-inline">
         <div class="media-element">
-          <img src="https://images.unsplash.com/photo-1641353989082-9b15fa661805?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
+          <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="400" frameborder="0"></iframe>
           <p class="title">Short title</p>
         </div>
         <div class="media-element">
