Media scroller component fix for width of each element

--- a/pages/services.html
+++ b/pages/services.html
@@ -99,14 +99,14 @@
     <div class="video-example">
       <h3>Course Introduction Hype Videos</h3>
       <!-- Media Scroller -->
-      <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="400" frameborder="0"></iframe>
+      <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="373" frameborder="0"></iframe>
       
     <div class="media-scroller-container">
       <h4>Media Scroller</h4>
       <div class="media-scroller snaps-inline">
         <div class="media-element">
           <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="400" frameborder="0"></iframe>
-          <p class="title">Short title</p>
+          <p class="title">Horse Course Introduction</p>
         </div>
         <div class="media-element">
           <img src="https://images.unsplash.com/photo-1642190672487-22bde32965f7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
