--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
   <nav id="main_nav">
     <div class="logo"></div>
     <ul>
-      <li class="drop-down" tabindex="0" ><a href="pages/services.html">Services <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+      <li tabindex="0"><a href="pages/services.html">Services</a></li>
+      <li class="drop-down" tabindex="0" ><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
         <div class="nav-dropdown">
           <ul>
-            <li><a href="pages/services.html#video">Video & Audio</a></li>
-            <li><a href="pages/services.html#design">Visual Design</a></li>
-            <li><a href="pages/services.html#interactive">Interactive</a></li>
-            <li><a href="pages/services.html#immersive">Immersive</a></li>
+            <li><a href="pages/portfolio.html#video">Video & Audio</a></li>
+            <li><a href="pages/portfolio.html#design">Visual Design</a></li>
+            <li><a href="pages/portfolio.html#interactive">Interactive</a></li>
+            <li><a href="pages/portfolio.html#immersive">Immersive</a></li>
           </ul>
         </div>
       </li>
-      <li tabindex="0"><a href="pages/trends.html">Trends</a></li>
-      <li class="drop-down-two" tabindex="0"><a href="./pages/about.html">About</a></li>
       <li tabindex="0"><a href="pages/resources.html">Resources</a></li>
+      <li class="drop-down-two" tabindex="0"><a href="./pages/about.html">Contact</a></li>
     </ul>
   </nav>
   <main>
