--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -59,19 +59,19 @@
   <nav class="explore-nav" id="main_nav">
     <a href="../index.html"><div class="logo"></div></a>
     <ul>
-      <li tabindex="0"><a href="pages/services.html">Services</a></li>
-      <li class="drop-down" tabindex="0" ><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
+      <li tabindex="0"><a href="services.html">Services</a></li>
+      <li class="drop-down" tabindex="0" ><a href="#">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
         <div class="nav-dropdown">
           <ul>
-            <li><a href="pages/portfolio.html#video">Video & Audio</a></li>
-            <li><a href="pages/portfolio.html#design">Visual Design</a></li>
-            <li><a href="pages/portfolio.html#interactive">Interactive</a></li>
-            <li><a href="pages/portfolio.html#immersive">Immersive</a></li>
+            <li><a href="portfolio.html#video">Video & Audio</a></li>
+            <li><a href="portfolio.html#design">Visual Design</a></li>
+            <li><a href="portfolio.html#interactive">Interactive</a></li>
+            <li><a href="portfolio.html#immersive">Immersive</a></li>
           </ul>
         </div>
       </li>
-      <li tabindex="0"><a href="pages/resources.html">Resources</a></li>
-      <li class="drop-down-two" tabindex="0"><a href="./pages/about.html">Contact</a></li>
+      <li tabindex="0"><a href="./resources.html">Resources</a></li>
+      <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
 
