update to media-scroller for keyboard navigation

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -101,28 +101,33 @@
       <!-- Media Scroller -->
     <div class="media-scroller-container">
       <h4>Video Delivery Types</h4>
-      <div class="media-scroller snaps-inline">
+      <div class="media-scroller snaps-inline" tabindex="0">
         <div class="media-element">
           <iframe src="https://courses.worldcampus.psu.edu/public/multimedia/COURSES/ANSC/ANSC107/ANSC107_MorningAtTheBarns.html" width="750" height="370" frameborder="0"></iframe>
           <p class="title">Course Introduction</p>
           <p class="sub-title">ANC107 - Introduction to Equine Science</p>
+          <span class="sr-only"><a href="#">1</a></span>
         </div>
         
         <div class="media-element">
           <img src="https://images.unsplash.com/photo-1641841344411-49dbd02896f4?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
           <p class="title">An even longer title on this one</p>
+          <span class="sr-only"><a href="#">2</a></span>
         </div>
-        <div class="media-element">
+        <div class="media-element" >
           <img src="https://images.unsplash.com/photo-1643223723262-7ce785730cf6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
           <p class="title">A dog that's blinking?</p>
+          <span class="sr-only"><a href="#">3</a></span>
         </div>
         <div class="media-element">
           <img src="https://images.unsplash.com/photo-1640938776314-4d303f8a1380?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
           <p class="title">Chair</p>
+          <span class="sr-only"><a href="#">4</a></span>
         </div>
         <div class="media-element">
           <img src="https://images.unsplash.com/photo-1641259041823-e09935369105?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
           <p class="title">Ut enim ad minim veniam</p>
+          <span class="sr-only"><a href="#">5</a></span>
         </div>
         <div class="media-element">
           <img src="https://images.unsplash.com/photo-1642543492481-44e81e3914a7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODc2Mw&ixlib=rb-1.2.1&q=80&w=400" alt="">
