--- a/index2.html
+++ b/index2.html
@@ -58,7 +58,7 @@
   <nav id="main_nav">
     <div class="logo"></div>
     <ul>
-      <li tabindex="0"><a href="pages/services.html">Services</a></li>
+      <li tabindex="0"><a href="pages/services.html">What We Do</a></li>
       <li class="drop-down" tabindex="0" ><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
         <div class="nav-dropdown">
           <ul>
