Logo add, code refactor of navigation

--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
   <!-- End Mobile Nav -->
 
   <nav id="main_nav">
-    <a href="#"><div class="logo"></div></a>
+    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD.png"/></a></div>
     <ul>
       <li tabindex="0"><a href="pages/services.html">What We Do</a></li>
       <li class="drop-down" tabindex="0" ><a href="pages/portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
