--- a/pages/services.html
+++ b/pages/services.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
+  <link rel="stylesheet" href="../styles/new.css">
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="../styles/services.css">
 </head>
@@ -57,7 +58,7 @@
   <!-- End Mobile Nav -->
   <!-- Main Navigation -->
   <nav class="explore-nav" id="main_nav">
-    <a href="../index.html"><div class="logo"></div></a>
+    <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png"/></a></div>
     <ul>
       <li tabindex="0"><a href="#">What We Do</a></li>
       <li class="drop-down" tabindex="0" ><a href="./portfolio.html">Portfolio <span class="animate less"><svg  aria-hidden="true" tabindex="-1" role="presentation" class="animation icon icon-arrow-down down-arrow" viewBox="0 0 32 32"><path fill="#EAECEF" d="M26.985,8.5l1.516,1.617L16.001,23.5l-12.5-13.383L5.009,8.5l10.992,11.758L26.985,8.5z"></path></svg></span></a>
