Transitioning new.css to main.css

--- a/pages/services.html
+++ b/pages/services.html
@@ -56,7 +56,7 @@
   </div>
   <!-- End Mobile Nav -->
   <!-- Main Navigation -->
-  <nav class="explore-nav" id="main_nav">
+  <nav class="dark-blue-500" id="main_nav">
     <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png"/></a></div>
     <ul>
       <li tabindex="0"><a href="#">What We Do</a></li>
