Added a link widget to test

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,6 +36,17 @@
       </div>
     </div>
   </div>
+
+  <!-- Widget -->
+  <!-- <div class="useful-links-widget">
+    <a href="#" class="useful-links-widget-toggle"></a>
+    <div class="useful-links-widget-links">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> -->
+
   <script src="../src/index.js"></script>
   <script src="../src/testimonial.js"></script>
 </body>
