adjustments to sizing of navigation

--- a/pages/services.html
+++ b/pages/services.html
@@ -10,51 +10,55 @@
   <link rel="stylesheet" href="../styles/services.css">
 </head>
 <body class="services">
-  <!-- Mobile Nav -->
-  <div id="hamburger_nav" class="hidden">
-    <button class="nav-btn open-btn">
-      <i class="fas fa-bars"></i>
-    </button>
-  </div>
-  <div class="nav nav-purple">
-    <div class="nav nav-teal">
-      <div class="nav nav-med-blue">
-        <button class="nav-btn close-btn">
-          <i class="fas fa-times"></i>
-        </button>
-        <img src="../assets/images/logo.svg" alt="Logo" class="logo">
-        
-        <ul class="list">
-          <li><a href="#">EXPLORE</a></li>
-          <li>
-            <ul>
-              <li><a href="#">Video & Audio</a></li>
-              <li><a href="#">Visual Design</a></li>
-              <li><a href="#">Interactives</a></li>
-              <li><a href="#">Immersive</a></li>
-            </ul>
-          </li>
-          <li><a href="#">TRENDS/EXPERIMENTAL</a></li>
-          <li>
-            <ul>
-              <li><a href="#">Visual Design</a></li>
-              <li><a href="#">360/Poser</a></li>
-            </ul>
-          </li>
-          <li><a href="#">ABOUT</a></li>
-          <li>
-            <ul>
-              <li><a href="#">What We Do</a></li>
-              <li><a href="#">Testimonials</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </li>
-          <li><a href="#">RESOURCES</a></li>
-        </ul>
+  <header>
+    <!-- Mobile Nav -->
+    <div id="hamburger_nav" class="hidden">
+      <button class="nav-btn open-btn">
+        <i class="fas fa-bars"></i>
+      </button>
+    </div>
+    <div class="nav nav-purple">
+      <div class="nav nav-teal">
+        <div class="nav nav-med-blue">
+          <button class="nav-btn close-btn">
+            <i class="fas fa-times"></i>
+          </button>
+          <img src="../assets/images/logo.svg" alt="Logo" class="logo">
+          
+          <ul class="list">
+            <li><a href="#">EXPLORE</a></li>
+            <li>
+              <ul>
+                <li><a href="#">Video & Audio</a></li>
+                <li><a href="#">Visual Design</a></li>
+                <li><a href="#">Interactives</a></li>
+                <li><a href="#">Immersive</a></li>
+              </ul>
+            </li>
+            <li><a href="#">TRENDS/EXPERIMENTAL</a></li>
+            <li>
+              <ul>
+                <li><a href="#">Visual Design</a></li>
+                <li><a href="#">360/Poser</a></li>
+              </ul>
+            </li>
+            <li><a href="#">ABOUT</a></li>
+            <li>
+              <ul>
+                <li><a href="#">What We Do</a></li>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </li>
+            <li><a href="#">RESOURCES</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
   <!-- End Mobile Nav -->
+  <!-- Logo -->
+  <a href="#" tabindex="0" class="wc-brand">
+    <!-- <img class="wc-logo" src="/assets/images/PSU_Logo_white.svg" alt="Penn State World Campus Logo" /></a> -->
   <!-- Main Navigation -->
   <nav class="dark-blue-500" id="main_nav">
     <div class="logo"><a href="../index.html"><img src="/assets/images/WCLD_white.png" alt="WCLD MM studio" /></a></div>
@@ -74,6 +78,7 @@
       <li class="drop-down-two" tabindex="0"><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
+</header>
 
   <div class="top-blue">
     <!-- <div class="hex-pattern"></div> -->
