h2 class update and card class add

--- a/pages/services.html
+++ b/pages/services.html
@@ -95,9 +95,9 @@
     </div> -->
   </div>
   
-  <h2 class="center blue-underline">What We Do</h2>
+  <h2 class="title center blue-underline">What We Do</h2>
 
-  <section id="video-section" class="video-section">
+  <section id="video-section" class="video-section service-card">
     <div class="video-text">
       <h3>Video & Audio </h3>
       <p>Offer high quality studio recording for voiceover, dialog, podcasts. Powerful brands serve as a unifying vision. They provide focus to align purpose, performance and people. Our approach: harness and leverage this collective ambition to yield disproportionate, differentiated value.</p>
