Contact: added TODO for form build

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,6 +37,8 @@
     </div>
   </div>
 
+  <!-- TODO: Add in form to email -->
+
   <!-- Widget -->
   <!-- <div class="useful-links-widget">
     <a href="#" class="useful-links-widget-toggle"></a>
